--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -218,6 +218,10 @@ h1, h2, h3, h4, h5, h6{
 	margin-right:0;
 	}
 
+li.last a	{
+	color : white; 
+}
+
 /* ----------------------------------------------BreadCrumb-------------------------------------*/
 
 #breadcrumb{
