--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -539,12 +539,12 @@ ul li a
     white-space: nowrap;
 }
 
-.last a 
+li.last a 
 {
     background-color: white;
 }
 
-.last a:hover	{
+li.last a:hover	{
 	background-color: white;
 }
 
