--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -530,9 +530,10 @@ li ul
     float: left;
 	display: block;
     text-decoration: none;
-    color: #2C5463;
+    color: #ffffff;
     border-top: 1px solid #ffffff;
     padding: 5px 15px 5px 15px;
+    background: #2C5463;
     margin-left: 1px;
     white-space: nowrap;
 	list-style : none; 
@@ -540,7 +541,7 @@ li ul
 
 ul li a:hover 
 {
-    color: #617F8A;
+    background: #617F8A;
 }
 li:hover ul 
 {
