--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -539,6 +539,11 @@ li ul
 	list-style : none; 
 }
 
+#topbar ul li a:hover 
+{
+    background: #617F8A;
+}
+
 li:hover ul 
 {
     display: block;
