--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html data-savefrom-tab-data="{&quot;module&quot;:&quot;lm&quot;,&quot;tooltip&quot;:&quot;Links found: 0&quot;}" xmlns="http://www.w3.org/1999/xhtml" xml:lang="EN" dir="ltr" lang="EN"><head profile="http://gmpg.org/xfn/11">
         <title>GISRUK 2015 : University of Leeds</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
         <meta http-equiv="imagetoolbar" content="no">
         <link rel="stylesheet" href="index_files/layout.css" type="text/css">
         <script src="index_files/ga.js" async="" type="text/javascript"></script><script src="index_files/widgets.js" type="text/javascript"></script>
