--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -48,13 +48,15 @@ div.wrapper{
 	}
 
 h1, h2, h3, h4, h5, h6{
-	margin:0;
-	padding:0;
-	font-size:20px;
-	font-weight:normal;
-	line-height:normal;
-	font-family:Georgia, "Times New Roman", Times, serif;
+	/*margin:0;*/
+	/*padding:0;*/
+	/*font-family:Georgia, "Times New Roman", Times, serif;*/
 	}
+
+h1, h2, h3{
+    color:#000000;
+}
+
 
 /* ----------------------------------------------Generalise-------------------------------------*/
 
@@ -509,11 +511,11 @@ h1, h2, h3, h4, h5, h6{
 
 ul
 {
-    font-family: Arial, Verdana;
-    font-size: 14px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    /*font-family: Arial, Verdana;*/
+    /*font-size: 14px;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*list-style: none;*/
 }
 
 #topbar ul li
