--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -49,12 +49,12 @@ div.wrapper{
 
 h1, h2, h3, h4, h5, h6{
 	/*margin:0;*/
-	/*padding:0;*/
-	/*font-family:Georgia, "Times New Roman", Times, serif;*/
+	padding:0;
+	font-family:Georgia, "Times New Roman", Times, serif;
 	}
 
 h1, h2, h3{
-    color:#000000;
+    color:#545454;
 }
 
 
