--- a/index_files/layout.css
+++ b/index_files/layout.css
@@ -13,7 +13,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 body{
 	margin:0;
 	padding:0;
-	font-size:12px;
+	font-size:14px;
 	font-family:verdana, Arial, Helvetica, sans-serif;
 	color:#777777;
 	background-color:#FFFFFF;
@@ -541,6 +541,7 @@ ul
     background: #2C5463;
     margin-left: 1px;
     white-space: nowrap;
+    text-size: 16px;
 }
 
 #topbar ul li a:hover 
